[package]
name = "rregex"
description = "Rust Regex binding for Javascript"
license = "MIT"
version = "1.10.0"
authors = [ "Fede Ramirez <i@2fd.me>" ]
publish = false
readme = "README.md"
edition = "2018"
homepage = "http://rregex.dev"
repository = "https://github.com/2fd/rregex"
wasm-opt = false

[dependencies]
regex = "~1.10"
regex-syntax = "0.8"
js-sys = "0.3"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
